Add time system and improvement playnum systems

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/PythonApplication2/discord.py
+/GamerPy/__pycache__/test.cpython-37.pyc
+/GamerPy/457486096155148289_レモンじゅーす.txt
